<resources>

    <!-- GENERAL -->
    <string name="general_company_name">Droidko</string>
    <string name="general_app_name">Voltfeed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="action_settings">Settings</string>
    <string name="progressdialog_connecting">Connecting…</string>
    <string name="volt">VOLT</string>
    <string name="volted">VOLTED</string>

    <!-- LOG IN-->
    <string name="login_disclaimer">By joining you agree to our</string>
    <string name="login_tos"><u>Terms &amp; Conditions</u></string>
    <string name="login_email">Email</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_btn_login">LOG IN</string>
    <string name="login_btn_signup">SIGN UP</string>
    <string name="login_require_all">Every field is required</string>
    <string name="login_not_valid_email">Please use your username, not your email</string>
    <string name="login_password_too_short">Password must be at least %1$d characters long</string>
    <string name="login_wrong_credentials">Sorry… Please check your email and password and try again :)</string>
    <string name="login_welcome">Welcome!</string>

    <!-- SIGN UP-->
    <string name="signup_email">Email</string>
    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm password</string>
    <string name="signup_join">JOIN</string>
    <string name="signup_passwords_dont_match">Passwords dosn\'t match</string>
    <string name="signup_invalid_username">Username unavailable, please choose another one</string>
    <string name="signup_user_created">User created</string>

    <!-- MAIN ACTIVITY -->
    <string name="fragment_connections_name">CONNECTIONS</string>
    <string name="fragment_timeline_name">TIMELINE</string>
    <string name="fragment_profile_name">PROFILE</string>
    <string name="fragment_timeline_no_posts">There are no posts to display\nWait a little bit and pull down to refresh</string>

    <!-- ERRORS -->
    <string name="error_no_internet">No internet connection, try again later</string>
    <string name="error_session_expired">Session expired. Please Log In again</string>
    <string name="error_connection_unknown">Unknown connection error</string>
    <string name="error_unknown">Ups! Something went wrong, try again later</string>

    <!-- FULL SCREEN IMAGE ACTIVITY -->
    <string name="title_activity_fullscreen_image">Voltfeed</string>
    <string name="dummy_button">Dummy Button</string>

    <!-- NEW POST FRAGMENT -->
    <string name="fragment_new_post_write_something">Speak your mind…</string>
    <string name="fragment_new_post_image_uploaded">Image uploaded</string>
    <string name="fragment_new_post_publish_successful">Idea posted</string>

    <!-- MESSAGE OF THE DAY -->
    <string name="motd_1">Electrifying some people to get some news…</string>
    <string name="motd_2">Disabling smells detector…</string>
    <string name="motd_3">Calling mothership…</string>
    <string name="motd_4">Calculating π…</string>
    <string name="motd_5">Freeing Schrödinger\'s cat…</string>

</resources>
