<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ar.com.wolox.woloxtrainingmolina.activities.SignUpActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/main_toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/main_toolbar"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/signup_username"
                style="@style/editText.regular"
                android:inputType="textEmailAddress"
                android:hint="@string/signup_username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/signup_email"
                style="@style/editText.regular"
                android:inputType="textEmailAddress"
                android:hint="@string/signup_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_password"
                style="@style/editText.regular"
                android:inputType="textPassword"
                android:hint="@string/signup_password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/signup_password_confirm"
                style="@style/editText.regular"
                android:inputType="textPassword"
                android:hint="@string/signup_confirm_password"/>
        </android.support.design.widget.TextInputLayout>

        <include
            layout="@layout/signup_tos_disclaimer"
            android:layout_height="@dimen/guideline_yellow"
            android:layout_width="match_parent"/>

        <Button
            android:id="@+id/signup_btn_join"
            style="@style/button.blue"
            android:text="@string/signup_join"/>
    </LinearLayout>

</RelativeLayout>
