<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".loginActivity">

    <ImageView
        android:id="@+id/login_img_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/coverlogin"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            layout="@layout/signup_tos_disclaimer"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_img_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_logo"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/signup_username"
                    style="@style/editText.regular"
                    android:hint="@string/login_username"
                    android:singleLine="true"
                    android:maxLength="32"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/login_password"
                    style="@style/editText.regular"
                    android:inputType="textPassword"
                    android:hint="@string/login_password"
                    android:singleLine="true"
                    android:maxLength="32"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/login_btn_login"
                style="@style/button.regular"
                android:text="@string/login_btn_login"/>

            <Button
                android:id="@+id/login_btn_signup"
                style="@style/button.blue"
                android:text="@string/login_btn_signup"/>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
